# TSLANet

./: .gitignore  Makefile  pyproject.toml
Classification/: TSLANet_classification.py  TSLANet_model_compiler.py  TSLANet_regression.py  dataloader.py  lob_dataloader.py  network.py  run_datasets.sh  utils.py
Forecasting/: TSLANet_Forecasting.py
textFiles/: AUDUSD.txt
