[tool.poetry]
name = "tslanet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
numpy = "^2.2.3"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
timm = "^1.0.15"
torchmetrics = "^1.6.1"
einops = "^0.8.1"
pandas = "^2.2.3"
polars = "^1.23.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
