[tool.poetry]
name = "tslanet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
timm = "^1.0.15"
torchmetrics = "^1.6.1"
einops = "^0.8.1"
pandas = "^2.2.3"
polars = "^1.23.0"
scikit-learn = "^1.6.1"
tensorboard = "^2.19.0"
h5py = "^3.13.0"
webdataset = "^0.2.111"
zstandard = "^0.23.0"
mosaicml-streaming = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
